web: handle update vm/network
